# study-timeseries

./: README.md  pyproject.toml
notebooks/: 01_intro_naive.ipynb
src/study_timeseries/: boosting.py  losses.py
